--- a/.github/workflows/eleventy.yml
+++ b/.github/workflows/eleventy.yml
@@ -29,8 +29,7 @@ jobs:
       
       - name: Build site
         run: |
-          npm install --include=dev
-          npx eleventy
+          yes | npx npx @11ty/eleventy
           cp CNAME _site/CNAME
 
       - uses: peaceiris/actions-gh-pages@v3
