--- a/.github/workflows/eleventy.yml
+++ b/.github/workflows/eleventy.yml
@@ -19,13 +19,13 @@ jobs:
         with:
           node-version: '18.5'
 
-      # - name: Build apps
-      #   run: |
-      #     cd app
-      #     npm install
-      #     npm run build
-      #     mkdir -p ../js
-      #     cp dist/assets/*.js ../js/app.js
+      - name: Build apps
+        run: |
+          cd app
+          npm install
+          npm run build
+          mkdir -p ../js
+          cp dist/assets/*.js ../js/app.js
       
       - name: Build site
         run: |
