--- a/.github/workflows/eleventy.yml
+++ b/.github/workflows/eleventy.yml
@@ -29,6 +29,7 @@ jobs:
       
       - name: Build site
         run: |
+          npm install --dev
           yes | npx npx @11ty/eleventy
           cp CNAME _site/CNAME
 
