--- a/.github/workflows/eleventy.yml
+++ b/.github/workflows/eleventy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build site
         run: |
           npm install --dev
-          yes | npx npx @11ty/eleventy
+          npx npx @11ty/eleventy
           cp CNAME _site/CNAME
 
       - uses: peaceiris/actions-gh-pages@v3
